--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "food_ordering_project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jeffdeng94.github.io",
+  "homepage": "https://jeffdeng94.github.io/react-food-ordering-app",
   "dependencies": {
     "-": "^0.0.1",
     "@fortawesome/fontawesome-free": "^6.1.0",
